= Counterclockwise ChangeLog 
Laurent Petit <laurent dot petit at gmail dot com>
:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0


== Changes between Counterclockwise 0.28.1 and 0.28.2

`0.28.2` released on October XXX, 2014

=== Fix


=== Enhancements


== Changes between Counterclockwise 0.28.0 and 0.28.1

`0.28.1` released on September 28, 2014

=== Fix

- Drag & Drop from Github / Bitbucket / Google Code URLs works in Linux

=== Enhancements

==== Leiningen / Clojure autodetection

- Added a check for missing `.classpath` file for Leiningen projects. Automatically reconstruct the java build path if it is missing.
- Better User feedback for Drag & Drop folder actions


== Changes between Counterclockwise 0.27.1 and 0.28.0

`0.28.0` released on September 25, 2014

=== Enhancements

==== Automatic configuration of Leiningen Projects

In reaction to a project creation which contains a `project.clj` file, or an existing project modification consisting in adding a `project.clj` file, etc., CCW will by default react by adding the `Leiningen Nature` to the project. Meaning you'll see the `Leiningen Dependencies` Classpath Container appear in the project, and be able to launch it as a Leiningen project.

This feature can be disabled globally via the menu:Preferences[Clojure > General > Automatic detection of Clojure/Leiningen projects] preference

==== Project Drag and Drop from OS to Counterclockwise

It is possible to drag a project folder project from Windows Explorer / Finder onto Eclipse / Counterclockwise. Any Leiningen project found within the dragged folder(s) will automatically be created ; and configured appropriately if automatic configuration is enabled.

==== Project Drag and Drop from Github / Bitbucket / Google code to Counterclockwise
