@@ -15,6 +15,7 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 === Fix
 
+- Removed default keybinding kbd:[Alt+Command+Q E] for command 'New REPL client for Eclipse embedded nrepl server (advanced usages) which was conflicting with a JDT command
 
 === Enhancements
 
